--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <script src=""></script>
+  <script src="CSS/index.css"></script>
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
 
@@ -12,11 +12,10 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/chat.css">
-    <script src=""></script>
   </head>
   <body>
     <div id="messagesDiv"></div>
     <input type="text" class="input" id="messageInput" placeholder="Message..." />
-    <script src=""></script>
+    <script src="JS/index.js"></script>
   </body>
 </html>
