--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+	    
+    <link rel="stylesheet" href="css/main.css"> 
+    <link rel="apple-touch-icon" href="meta/App-logo.PNG">
+    <meta name="apple-mobile-web-app-capable" content="yes"> 
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <script src="CSS/index.css"></script>
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
