--- a/index.html
+++ b/index.html
@@ -35,19 +35,9 @@ em {
   color: royalblue;
 }
 
-#messagesDiv {
-  background-color: black;
-  border-radius: 15px;
-  overflow: auto;
-  height: 230px;
-  width: 80%;
-  padding: 10px;
-  border: 3px solid cyan;
-  margin-bottom: 5px;
-  text-align: left;
-  color: cyan;
-  font-size: 24px;
-}
+	  body {
+		  background-color: black;
+	  }
 
 #nameInput {
   width: 26%;
