--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ h1 {
 
 p {
  font-size: 16px;
+	color: white;
 }
 
 input {
@@ -37,6 +38,7 @@ em {
 
 	  body {
 		  background-color: black;
+		  color: white;
 	  }
 
 #nameInput {
