--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@ li {
     <link rel="stylesheet" href="css/chat.css">
   </head>
   <body>
+	  <ul id="listings">
+		
+		<li class="him">By Other User</li>
+		<li class="me">By this User, first message</li>
+		<li class="me">By this User, secondmessage</li>
+		<li class="me">By this User, third message</li>
+		<li class="me">By this User, fourth message</li>
+			<input id="msg" placeholder="message">
+	      <div onclick="activate()" class="msgsendbtn">Send</div>	
+	</ul>	      
     <div id="messagesDiv"></div>
     <input type="text" class="input" id="messageInput" placeholder="Message..." />
     <script src="JS/index.js"></script>
